--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
 </head>
-<body style="margin:0 0 0 0; background: #2B2B2B;" oncontextmenu="return false;">
+<body oncontextmenu="return false;">
     <app-root></app-root>
 </body>
 </html>
