feat: read dcm file using wado-image-loader

--- a/src/index.html
+++ b/src/index.html
@@ -18,4 +18,8 @@
 <body oncontextmenu="return false;">
     <app-root></app-root>
 </body>
+<script src="./assets/cornerstone/lib/cornerstoneWADOImageLoader.js"></script>
+<script>window.cornerstoneWADOImageLoader || document.write('<script src="https://unpkg.com/cornerstone-wado-image-loader">\x3C/script>')</script>
+<!-- <script src="./assets/cornerstone/lib/cornerstone.min.js"></script>
+<script src="./assets/cornerstone/lib/dicomParser.min.js"></script> -->
 </html>
