--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp" rel="stylesheet">
 </head>
-<body oncontextmenu="return false;">
+<body>
     <app-root></app-root>
 </body>
 <script src="./assets/cornerstone/lib/cornerstoneWADOImageLoader.js"></script>
